tests/paczka1/fuzzy1/64251443.err
Error in line 19: lPvpQA7T8eo S2 44,12
Error in line 14: ZWX9ER A565 73,2
Error in line 8: lPvpQA7T8eo S2 69,1
Error in line 22: lPvpQA7T8eo A565 95,3
Error in line 20: ZWX9ER A482 40,8
Error in line 28: U6ZMFoF A482 32,1
Error in line 25: ZWX9ER A716 68,5
Error in line 30: ZWX9ER A482 6,4
